2003-02-11  Uwe Stieber  <uwe@wwws.de>

	* configure.in: Add support for kaOS as cross build target system.
	* configure: Regenerated.

2003-02-10  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (md_begin): If the Maverick co-processor is
	selected, set the EF_ARM_MAVERICK_FLOAT flag and
	bfd_mach_arm_ep9312 machine number.

2003-02-08  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (reloc_needs_lo_p): New function.
	(fixup_has_matching_lo_p): New function.
	(append_insn): Use reloc_needs_lo_p to check whether a relocation
	might need a matching %lo().  Reuse the head of mips_hi_fixup_list
	if that fixup already has a matching %lo().  Don't call frag_wane here.
	(macro): Call frag_wane here if the last unmatched hi was in the
	current frag.
	(pic_need_relax): New function, split out from...
	(md_estimate_size_before_relax): ...here.
	(mips_frob_file): Use reloc_needs_lo_p.  Use pic_need_relax to test
	whether BFD_RELOC_MIPS_GOT16 fixups refer to global symbols.

2003-02-07  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (my_getSmallExpression): Rework bracket handling.

2003-02-06  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_elf_suffix): Undo part of last change so that
	x@toc+off works.

2003-02-05  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (mapping): Handle new TLS reloc specs.
	(ppc_elf_suffix): Don't warn for x+off@got when ppc64 and don't
	accept x@got+off etc.
	(md_assemble): Handle TLS relocs.
	(ppc_force_relocation): Force for all TLS relocs.
	(ppc_fix_adjustable): Likewise.
	(md_apply_fix3): Handle TLS relocs.

2003-02-04  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (obj_elf_change_section): Set SEC_LINK_ONCE and
	SEC_LINK_DUPLICATES_DISCARD directly rather than using elf_linkonce_p.

2003-02-02  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (enum small_ex_type): Remove.
	(imm_unmatched_hi): Remove.